testdata/repos/standalone/SourcingCheck/InvalidSlot/InvalidSlot-4.ebuild
EAPI=7
DESCRIPTION="Ebuild with empty SLOT"
HOMEPAGE="https://github.com/pkgcore/pkgcheck"
LICENSE="BSD"
SLOT=""
